# APP_socket_UDP

./: Dockerfile  README.md  main.py  message.html  pyproject.toml
storage/: data.json
